Guardando cambios antes del rebase

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- 🟪 PIE DE PÁGINA -->
     <footer>
         <p>© 2025 Restaurante Delicioso | Síguenos en
-            <a href="#">Instagram</a> · <a href="#">Facebook</a>
+            <a href="https://www.instagram.com/">Instagram</a> · <a href="https://www.facebook.com/?locale=es_ES">Facebook</a>
         </p>
     </footer>
 </body>
