Resuelto conflicto en index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi cuarta version desde rama main</title>
->>>>>>> develop1
+    <title>Restaurante Delicioso</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Bienvenido a mi página web</h1>
-    <p>Este es un párrafo de ejemplo creado en Visual Studio Code. Aquí puedes escribir lo que quieras para mostrar en tu sitio web.</p>
+    <!-- 🟩 CABECERA -->
+    <header>
+        <div class="logo">
+
+            <img src="logo.jpg" width="150">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="activo">Inicio</a></li>
+                <li><a href="menu.html">Menú</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- 🟦 SECCIÓN PRINCIPAL -->
+    <section class="presentacion">
+        <h1>Bienvenido a Restaurante Delicioso</h1>
+        <p>Disfruta de la mejor comida casera con ingredientes frescos y un ambiente acogedor.</p>
+        <img src="Espacio acogedor.jpeg" alt="Plato destacado">
+    </section>
+
+    <!-- 🟧 SECCIÓN DE TARJETAS -->
+    <section class="tarjetas">
+        <div class="tarjeta">
+            <img src="ensaladilla.jpeg" alt="Entrante">
+            <h3>Entrantes</h3>
+            <p>Pequeñas delicias para abrir el apetito.</p>
+        </div>
+        <div class="tarjeta">
+            <img src="images.jpeg" alt="Plato principal">
+            <h3>Platos principales</h3>
+            <p>Sabores intensos para los paladares exigentes.</p>
+        </div>
+        <div class="tarjeta">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTf5BD6qQjwF3aOQpBhY8ANMtxMnW13JLMUjw&s"
+                alt="Postre">
+            <h3>Postres</h3>
+            <p>Un final dulce para una comida perfecta.</p>
+        </div>
+    </section>
+
+    <!-- 🟪 PIE DE PÁGINA -->
+    <footer>
+        <p>© 2025 Restaurante Delicioso | Síguenos en
+            <a href="#">Instagram</a> · <a href="#">Facebook</a>
+        </p>
+    </footer>
 </body>
+
 </html>
